--- a/style.css
+++ b/style.css
@@ -85,3 +85,9 @@ p{
     outline: 1px solid yellow;
     background: radial-gradient(square,rgb(59, 223, 220),rgb(149, 115, 115));
 }
+a{
+   height:100px;
+   width:100px;
+   color:blue;
+   font-size:xx-larger; 
+}
